[gd_scene load_steps=3 format=3 uid="uid://b0qg05ifqy3h3"]

[ext_resource type="Script" uid="uid://ch2mwcwxywqfl" path="res://scripts/UI/parameters.gd" id="1_m2cht"]
[ext_resource type="Theme" uid="uid://csttegjq0h4hc" path="res://theme/lego_theme.tres" id="2_pweea"]

[node name="Parameters" type="Control"]
layout_mode = 3
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = -346.0
offset_top = -220.0
offset_right = -4.0
offset_bottom = 220.0
grow_vertical = 2
size_flags_horizontal = 0
size_flags_vertical = 0
script = ExtResource("1_m2cht")

[node name="ParametersPanel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -213.0
offset_right = 335.026
offset_bottom = 213.0
grow_vertical = 2
theme = ExtResource("2_pweea")
theme_type_variation = &"MiniPanel"

[node name="HBoxContainer" type="HBoxContainer" parent="ParametersPanel"]
layout_mode = 2

[node name="Control8" type="Control" parent="ParametersPanel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="ParametersPanel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Control5" type="Control" parent="ParametersPanel/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Parameters" type="Label" parent="ParametersPanel/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.1
theme_override_font_sizes/font_size = 38
text = "Parameters"
horizontal_alignment = 1

[node name="Control" type="Control" parent="ParametersPanel/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Graphics" type="Label" parent="ParametersPanel/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.1
theme_override_font_sizes/font_size = 24
text = "Graphics"
horizontal_alignment = 1

[node name="Control3" type="Control" parent="ParametersPanel/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="FullscreenMode" type="CheckButton" parent="ParametersPanel/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Fullscreen"

[node name="HighGraphics" type="CheckButton" parent="ParametersPanel/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "High graphics"

[node name="Control8" type="Control" parent="ParametersPanel/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Control9" type="Control" parent="ParametersPanel/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Keyboard" type="Label" parent="ParametersPanel/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.1
theme_override_font_sizes/font_size = 24
text = "Keyboard"
horizontal_alignment = 1

[node name="UseWSAD" type="ItemList" parent="ParametersPanel/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
allow_search = false
auto_height = true
item_count = 2
item_0/text = "Use W,S,A,D and Ctrl"
item_1/text = "Use arrows and Ctrl"

[node name="Control2" type="Control" parent="ParametersPanel/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label3" type="Label" parent="ParametersPanel/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.1
theme_override_font_sizes/font_size = 24
text = "Sound"
horizontal_alignment = 1

[node name="Sound" type="HBoxContainer" parent="ParametersPanel/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Labels" type="VBoxContainer" parent="ParametersPanel/HBoxContainer/VBoxContainer/Sound"]
layout_mode = 2

[node name="MusicSliderLabel" type="Label" parent="ParametersPanel/HBoxContainer/VBoxContainer/Sound/Labels"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.1
theme_override_font_sizes/font_size = 18
text = "Music"
horizontal_alignment = 1

[node name="EffectSliderLabel" type="Label" parent="ParametersPanel/HBoxContainer/VBoxContainer/Sound/Labels"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.1
theme_override_font_sizes/font_size = 18
text = "Effects"
horizontal_alignment = 1

[node name="Music2" type="VBoxContainer" parent="ParametersPanel/HBoxContainer/VBoxContainer/Sound"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MusicSlider" type="HSlider" parent="ParametersPanel/HBoxContainer/VBoxContainer/Sound/Music2"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 1.995
step = 0.01

[node name="EffectSlider" type="HSlider" parent="ParametersPanel/HBoxContainer/VBoxContainer/Sound/Music2"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 1.995
step = 0.01

[node name="Control6" type="Control" parent="ParametersPanel/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="ParametersPanel/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="ParametersPanel/HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="OK" type="Button" parent="ParametersPanel/HBoxContainer/VBoxContainer/HBoxContainer/MarginContainer"]
layout_mode = 2
text = "OK"

[node name="MarginContainer2" type="MarginContainer" parent="ParametersPanel/HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Cancel" type="Button" parent="ParametersPanel/HBoxContainer/VBoxContainer/HBoxContainer/MarginContainer2"]
layout_mode = 2
size_flags_horizontal = 3
text = "Cancel"

[node name="Control7" type="Control" parent="ParametersPanel/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Control9" type="Control" parent="ParametersPanel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[connection signal="pressed" from="ParametersPanel/HBoxContainer/VBoxContainer/HBoxContainer/MarginContainer/OK" to="." method="_on_ok_pressed"]
[connection signal="pressed" from="ParametersPanel/HBoxContainer/VBoxContainer/HBoxContainer/MarginContainer2/Cancel" to="." method="_on_cancel_pressed"]
